--- a/dashboard/src/scss/components/cast/cast.scss
+++ b/dashboard/src/scss/components/cast/cast.scss
@@ -9,9 +9,9 @@
     flex-direction: column;
     justify-content: start;
     align-items: start;
-    gap: 1rem;
+    // gap: 1rem;
     background: rgba(map-get(variables.$baseVars, "red"), 0.3);
-    padding: 2rem 1rem;
+    padding: 1rem 1rem;
     border-radius: 1rem;
     
     &__heading{
@@ -19,9 +19,31 @@
         display: flex;
         justify-content: start;
         align-items: center;
-        width: 100%;
-        font-size: 110%;
-        font-family: map-get(variables.$fontVars, "accent");
+        gap: 1rem;
+        background: rgba(map-get(variables.$baseVars, "red"), 0.3);
+        padding: 0.4rem;
+        border-radius: 1rem 1rem 0 0;
+        
+        &--button{
+            font-size: 110%;
+            font-family: map-get(variables.$fontVars, "accent");
+            border: none;
+            font-weight: 800;
+            color: rgba(map-get(variables.$baseVars, "color"), 0.5);
+            background: none;
+            padding: 0.8rem 1.4rem;
+
+            &-active{
+                background: rgba(map-get(variables.$baseVars, "red"), 0.3);
+                border-radius: 0.4rem 0.4rem 0 0;
+                border-radius: 1rem;
+                color: map-get(variables.$baseVars, "color");
+            }
+
+            &:hover{
+                cursor: pointer;
+            }
+        }
     }
     &__list{
         height: 100%;
@@ -35,9 +57,9 @@
         overflow-y: unset;
         background: rgba(map-get(variables.$baseVars, "red"), 0.3);
         width: 100%;
-        padding: 0.4rem;
+        padding: 0.4rem 1rem;
         border-radius: 0.4rem;
-        border: 0.1rem solid rgba(map-get(variables.$baseVars, "red"), 0.3);
+        border-top-left-radius: 0;
 
         &::-webkit-scrollbar{
             display: none;
@@ -123,6 +145,41 @@
                     @include animations.loading;
                 }
             }
+        }
+    }
+}
+
+.seasons{
+
+    &__item{
+        width: 100%;
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        gap: 1rem;
+
+        &--image{
+            height: 6rem;
+            object-fit: cover;
+            border-radius: 0.4rem;
+        }
+
+        &--wrapper{
+            display: flex;
+            flex-direction: column;
+            justify-content: start;
+            align-items: start;
+            gap: 1rem;
+        }
+
+        &--name{
+            font-weight: 600;
+            font-size: 85%;
+        }
+        
+        &--episodes{
+            font-size: 75%;
+            color: rgba(map-get(variables.$baseVars, "accent"), 0.9);
         }
     }
 }
